--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!–– PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!! -->
 <html>
 <body>
 <center>
