--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!–– PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!! -->
 <html>
 <body>
+  <img src="logo.png" 
 <center>
 <h1>Welcome to</h1>
 
