--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!–– PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!!  PLEASE DO NOT EDIT THE CODE!!! -->
 <html>
 <body>
-  <img src="logo.png" 
 <center>
+  <img src="logo.png">
 <h1>Welcome to</h1>
 
 <h2>Matteo's Games</h2>
