--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <body>
 <center>
-  <img src="logo.png">
+  <img src="Logo.png" alt="Logo" width="600" height="245">
+  
 <h1>Welcome to</h1>
 
 <h2>Matteo's Games</h2>
