--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 <center>
-  <img src="Logo.png" alt="Logo" width="600" height="245">
+  <div> <img src="img/Logo.png" class="img-responsive" alt=""> </div>
   
 <h1>Welcome to</h1>
 
